--- a/ElectronicsStore/ElectronicsStore.API/ElectronicsStore.API.csproj
+++ b/ElectronicsStore/ElectronicsStore.API/ElectronicsStore.API.csproj
@@ -1,30 +1,27 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>902ddafd-ee14-412a-9d06-057b04941022</UserSecretsId>
   </PropertyGroup>
-
   <ItemGroup>
     <None Include="wwwroot\index.html" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Autofac" Version="5.1.3" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="RestSharp" Version="106.10.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\ElectronicsStore.Core\ElectronicsStore.Core.csproj" />
     <ProjectReference Include="..\ElectronicsStore.Repository\ElectronicsStore.Repository.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <Folder Include="wwwroot\img\" />
   </ItemGroup>
-
 </Project>
